...
                                        <size key="shadowOffset" width="0.0" height="2"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Stage:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkc-cj-UZt">
                                        <rect key="frame" x="387" y="241" width="47" height="22"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <size key="shadowOffset" width="0.0" height="2"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BqB-EU-0MK">
                                        <rect key="frame" x="76" y="241" width="48" height="22"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <rect key="frame" x="20" y="236" width="32" height="32"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" image="resetButton"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="resetButton"/>
...
                                        <rect key="frame" x="245" y="144" width="79" height="61"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" backgroundImage="crossbow512">
                                            <color key="titleShadowColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        </connections>
                                    </button>
                                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="HV9-dt-rPb">
                                        <rect key="frame" x="74" y="84" width="415" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <size key="shadowOffset" width="0.0" height="2"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Place the Bull's Eye as close as you can to:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8
                                        <rect key="frame" x="76" y="21" width="375" height="21"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                    <constraint firstAttribute="width" constant="32" id="xLt-y0-Cg6"/>
                                </constraints>
                                <state key="normal" image="about"/>
                                <connections>
                                    <action selector="mediumButtonTapped:" destination="G25-Cw-hPb" eventType="touchUpInside" id="I6L-a0-iOw"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m6d-bP-cL8">
                                <rect key="frame" x="268" y="268" width="32" height="32"/>
                                <state key="normal" image="CloseButton512"/>
                                <connections>
                                    <action selector="close" destination="G25-Cw-hPb" eventType="touchUpInside" id="bmD-gP-47N"/>
...
