...
            title = "Juuuust a bit outside..."
        }

        let message = "You hit \(currentValue)!\n" + "You scored \(points) points!"
        
        let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
        let action = UIAlertAction(title: "Okay!", style: .default, handler: {
            action in
            self.successBuzz()
            self.startNewRound()
        })
        alert.addAction(action)
        present(alert, animated: true, completion: nil)
...
